# edgedb-python

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .yamllint  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.ci/: appveyor.yml  build-manylinux-wheels.sh  package-version.py  travis-before-install.sh  travis-build-wheels.sh  travis-install.sh  travis-release.sh  travis-tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
ai/: pyproject.toml
ai/edgedb_ai/: core.py
docs/: Makefile  README.md  conf.py  connection.rst  index.rst  installation.rst  instances.rst  usage.rst
edgedb/: __init__.py  _cluster.py  _taskgroup.py  _testbase.py  _version.py  abstract.py  asyncio_client.py  asyncio_con.py  asyncio_pool.py  base_client.py  base_con.py  blocking_client.py  blocking_con.py  blocking_pool.py  codegen.py  color.py  compat.py  con_utils.py  connresource.py  credentials.py  describe.py  enums.py  introspect.py  legacy_transaction.py  options.py  platform.py  retry.py  transaction.py
gel/: __init__.py  __main__.py  _testbase.py  _version.py  abstract.py  asyncio_client.py  base_client.py  blocking_client.py  cli.py  color.py  con_utils.py  introspect.py  options.py  quote.py  transaction.py
tests/: __init__.py  bench_uuid.py  connection_testcases.json  ruff.toml  test_ai_vectorstore.py  test_async_fetch.py  test_async_query.py  test_async_retry.py  test_async_tx.py  test_async_tx_legacy.py  test_asyncio_client.py  test_blocking_client.py  test_codegen.py  test_con_utils.py  test_connect.py  test_credentials.py  test_datatypes.py  test_datetime.py  test_django_basic.py  test_enum.py  test_errors.py  test_fetch.py  test_globals.py  test_memory.py  test_namedtuples.py  test_pool.py  test_postgis.py  test_proto.py  test_scram.py  test_sourcecode.py  test_sqla_basic.py  test_sqla_features.py  test_sqlmodel_basic.py  test_state.py  test_sync_fetch.py  test_sync_query.py  test_sync_retry.py  test_sync_tx.py  test_sync_tx_legacy.py  test_vector.py
tools/: gen_init.py  make_import_shims.py
(+252 files in other folders)
