[project]
name = "edgedb_ai"
version = "0.1.0"
description = "Helper library for the EdgeDB AI extension"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "edgedb",
  "httpx",
  "httpx-sse"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
